Update Group-4 full project: backend, frontend, and sanitized configuration